Så er den snart klar
Så er den snart klar til deploy

Co-Authored-By: Qvisty <jgq@live.dk>

--- a/deploy/templates/deploy/forside.html
+++ b/deploy/templates/deploy/forside.html
@@ -1,27 +1,28 @@
 {% extends 'deploy/base.html' %}
 {% block content %}
+<h3><b><i><u><font color=red>På følgende sider er der hjælp til at deploy på Fly.io.<br>
+    Håber der er hjælp at hente</font></u></i></b></h3>
 
-<br>
-<br>
-<br>
-<br>
-<div position=left>
+<div position=center>
 <h1 style='margin:0;
-                            transform: rotate(-35deg);position: left;'> 
+                            transform: rotate(-35deg);position: center;'> 
                             <b><font color=blue>DEPLOY</font>-
                             <i><font color=green>ON</font></i>-
                             <u><font color=red>FLY</font></u> 
   </b></h1>
-</div>
+  
 <br>
 <br>
   <br>
     <br>
     <br>
+    <br>
+</div>
     <!--<h3><font color=green>Når en der skal startes på at kode en side, er navigationen en af de første ting man skal tænke over.<br>
        skal dem der skal ind på siden navigere rundt, hvordan vil man have siden til at se ud m.m.<br>
       Det kommer jeg med nogle bud på her. Og det er muligt at afprøve dem.<br>
     noget andet der skal tænkes over er hvordan siden skal se ud, skal der tabeller med og så videre.<br>
   Men denne gang er det navigation vi kigger på.</font></h3>-->
+<br>
 
 {% endblock content %}
