--- a/deploy/templates/deploy/ind.html
+++ b/deploy/templates/deploy/ind.html
@@ -2,6 +2,10 @@
 {% block content %}
 
 <h1><b><i><font color=green>INDLEDNING</font></i></b></h1>
+<br>
+<li><h3><u><a href="https://fly.io/" target="_blank" class="nav-link active py-3 border-bottom"> <i class="#"></i> <small>FLY.IO</small> </a></u></h3> </li>
+
+
 <h4>Jeg har nu to gang deployd med fly, dog uden database.<br>
     Den anden gang spurgte jeg Chat OpenAI om hjælp med følgende spørgsmål:<br>
     'kan du hjælpe med punkt for punkt hvordan jeg deploy i fly. Har lavet min django app i VS og gemt i Github'<br>
@@ -14,7 +18,7 @@
 
  - Du har en databasekonfiguration (f.eks. PostgreSQL).<br>
 
- - Du har installeret Git og Docker på din maskine.<br>
+ - Du har installeret Git og Docker på din maskine.(her kan du logge ind med både google og github)<br>
 
  - Du har oprettet en konto på Fly.io.<br>
  <br>
