--- a/deploy/templates/deploy/punkt4.html
+++ b/deploy/templates/deploy/punkt4.html
@@ -6,16 +6,16 @@
 <h4>4. Initialiser Fly<br>
 <h6>bash</h6>
 <br>
-fly launch<br>
+<h4>fly launch<br>
 Vælg:<br>
 
-Et navn til appen.<br>
+- Et navn til appen.<br>
 
-Region (vælg den nærmeste, f.eks. ams for Amsterdam).<br>
+- Region (vælg den nærmeste, f.eks. ams for Amsterdam).<br>
 
-Fly spørger om du vil oprette en fly.toml fil – svar ja.<br>
+- Fly spørger om du vil oprette en fly.toml fil – svar ja.<br>
 
-Vælg nej til databasen her (vi gør det separat for PostgreSQL).<br>
+- Vælg nej til databasen her (vi gør det separat for PostgreSQL).<br>
 
 Dette opretter fly.toml, Dockerfile, og andre nødvendige filer.</h4>
 
