--- a/deploy/templates/deploy/base.html
+++ b/deploy/templates/deploy/base.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", inital-scale=1.0, "shrink-to-fit=no">
-      <title>ideer</title>
+      <title>Deploy</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 <!-- Google Fonts -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
@@ -19,10 +19,7 @@
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>-->
    <style>
-   <body> 
-    {
-       position: relative; 
-   }
+   
    </style>
 
      </head>
@@ -79,7 +76,7 @@
 
 <div class="container mb-3">
         <div class="row justify-content-left mt-5">
-          <div class="col-md-12 col-sm-12 offset md-1 p-4 text-center">
+          <div class="col-md-12 col-sm-12 offset md-1 p-4 text-left">
             <font color=green><h1><b><u><i>Help whit deploy on Fly</i></u></b></h1></font><br>
             <br>
 
